# HTK_HTS

./: Acknowledgements  Acknowledgments  COPYING  ChangeLog  FAQ  INSTALL  Makefile.in  README  configure  configure.ac  configure.in  hts_ChangeLog  hts_README
HLMLib/: ChangeLog  LCMap.c  LCMap.h  LGBase.c  LGBase.h  LModel.c  LModel.h  LPCalc.c  LPCalc.h  LPMerge.c  LPMerge.h  LUtil.c  LUtil.h  LWMap.c  LWMap.h  Makefile  Makefile.in
HLMTools/: ChangeLog  Cluster.c  HLMCopy.c  LAdapt.c  LBuild.c  LFoF.c  LGCopy.c  LGList.c  LGPrep.c  LLink.c  LMerge.c  LNewMap.c  LNorm.c  LPlex.c  LSubset.c  Makefile  Makefile.in
HTKBook/: .#HTK.tex.1.2  .#Makefile.1.4  .#adapt.tex.1.2  .#config.tex.1.6  .#htkbook.tex.1.8  .#htkoview.tex.1.3  ChangeLog  HTK.tex  Makefile  Makefile.in  adapt.tex  config.tex  decode.tex  errors.tex  exampsys.tex  fundaments.tex  hlmfund.tex  hlmtutorial.tex  htkbook.out  htkbook.tex  htkoview.tex  htkslf.tex  log  models.tex  netdict.tex  openviron.tex  refine.tex  speechio.tex  train.tex
HTKBook/HTKFigs/: headapt.eps
HTKBook/HTKRef/: #HERest.tex#  HCompV.tex  HDMan.tex  HDecode.tex  HEAdapt.tex  HERest.tex  HHEd.tex  HLRescore.tex  HLStats.tex  HMMIRest.tex  HParse.tex  HResults.tex  HSmooth.tex  HVite.tex  LGCopy.tex  LLink.tex  LNewMap.tex  tools.tex
HTKLVRec/: HDecode-license.txt  HDecode.c  HDecode.mod.c  HLVLM.c  HLVLM.h  HLVModel.c  HLVModel.h  HLVNet.c  HLVNet.h  HLVRec-GC.c  HLVRec-LM.c  HLVRec-misc.c  HLVRec-outP.c  HLVRec-propagate.c  HLVRec-traceback.c  HLVRec.c  HLVRec.h  Makefile.in  README  config.h  config.orig.h
HTKLib/: ChangeLog  HAdapt.c  HAdapt.h  HArc.c  HArc.h  HAudio.c  HAudio.h  HDict.c  HDict.h  HExactMPE.c  HExactMPE.h  HFB.c  HFB.h  HFBLat.c  HFBLat.h  HGen.c  HGen.h  HGraf.c  HGraf.h  HGraf.null.c  HGraf_WIN32.c  HLM.c  HLM.h  HLabel.c  HLabel.h  HLat.c  HLat.h  HMTrain.c  HMTrain.h  HMap.c  HMap.h  HMath.c  HMath.h  HMem.c  HMem.c~  HMem.h  HModel.c  HModel.c~  HModel.h  HNet.c  (+29 more)
HTKTools/: ChangeLog  HBuild.c  HCompV.c  HCopy.c  HDMan.c  HEAdapt.c  HERest.c  HFst.c  HHEd.c  HInit.c  HLEd.c  HLRescore.c  HLStats.c  HList.c  HMGenS.c  HMMIRest.c  HMgeTool.c  HParse.c  HQuant.c  HRest.c  HResults.c  HSGen.c  HSLab.c  HSMMAlign.c  HSmooth.c  HVite.c  Makefile  Makefile.in  htk_htktools_nt.mkf
autom4te.cache/: output.0  traces.0
env/: ChangeLog  env.linux  exp.linux  exp.linux_icc
htkdist/: Makefile.in  README  configure
htkdist/HLMLib/: LCMap.c  LGBase.c  LGBase.h  LModel.c  LPCalc.c  LPCalc.h  LPMerge.c  LPMerge.h  LUtil.c  LWMap.c
htkdist/HLMTools/: Cluster.c  HLMCopy.c  LAdapt.c  LBuild.c  LFoF.c  LGCopy.c  LGList.c  LGPrep.c  LLink.c  LMerge.c  LNewMap.c  LNorm.c  LPlex.c  LSubset.c
htkdist/HTKBook/: ChangeLog  Makefile.in  adapt.tex  config.tex  decode.tex  discmods.tex  exampsys.tex  fundaments.tex  hlmfiles.tex  hlmfund.tex  htkbook.out  htkbook.tex  htkoview.tex  labels.tex  models.tex  netdict.tex  speechio.tex  train.tex
htkdist/HTKBook/HTKRef/: HCopy.tex  HERest.tex  HHEd.tex  HLRescore.tex  HQuant.tex  HSLab.tex
htkdist/HTKLVRec/: HDecode.mod.c  HLVLM.c  HLVLM.h  HLVModel.c  HLVRec-traceback.c  Makefile.in
htkdist/HTKLib/: HAdapt.c  HAdapt.h  HArc.c  HArc.h  HAudio.c  HAudio.h  HDict.c  HDict.h  HExactMPE.c  HExactMPE.h  HFB.c  HFBLat.h  HGraf.c  HGraf.null.c  HGraf_WIN32.c  HLM.c  HLM.h  HLabel.c  HLat.c  HLat.h  HMap.c  HMath.c  HMem.c  HMem.h  HModel.c  HNet.c  HNet.h  HParm.c  HParm.h  HRec.c  HRec.h  HShell.c  HShell.h  HSigP.c  HSigP.h  HTrain.c  HTrain.h  HUtil.c  HUtil.h  HVQ.c  (+4 more)
htkdist/HTKTools/: HBuild.c  HCompV.c  HCopy.c  HDMan.c  HERest.c  HHEd.c  HInit.c  HLEd.c  HLRescore.c  HLStats.c  HList.c  HParse.c  HQuant.c  HRest.c  HResults.c  HSGen.c  HSLab.c  HSmooth.c  HVite.c  Makefile.in
hts_engine/: Makefile.in  global.hpp  hts_engine.cpp  hts_engine_nt.mkf  misc.cpp  misc.hpp  mlpg.cpp  mlpg.hpp  model.cpp  model.hpp  tree.cpp  tree.hpp  vocoder.cpp  vocoder.hpp
samples/RMHTK/work/R1/hmm0/: MODELS~
